Migrating to Gradle.

--- a/axelor-core/src/main/resources/i18n/messages.csv
+++ b/axelor-core/src/main/resources/i18n/messages.csv
@@ -1,12 +1,12 @@
 "key","message","comment","context"
 "Action","","","resources/domains/Meta.xml:64
 resources/views/User.xml:40
-resources/views/Meta.xml:99
 resources/views/User.xml:51
-resources/domains/Meta.xml:82"
-"Action Menu","","","resources/views/Meta.xml:151"
+resources/domains/Meta.xml:82
+resources/views/Meta.xml:103"
+"Action Menu","","","resources/views/Meta.xml:155"
 "Action Menus","","","resources/views/Menu.xml:105
-resources/views/Meta.xml:142
+resources/views/Meta.xml:146
 resources/views/Menu.xml:103"
 "Action name can't be changed.","","","java/com/axelor/meta/web/MetaController.java:95"
 "Actions","","","resources/views/Menu.xml:88
@@ -15,25 +15,25 @@ resources/views/Schedules.xml:21"
 "Activate the user from the specified date.","","","resources/domains/User.xml:22"
 "Active","","","resources/domains/MetaSchedule.xml:19"
 "Administration","","","resources/views/Menu.xml:6"
-"All Actions","","","resources/views/Meta.xml:91
+"All Actions","","","resources/views/Meta.xml:95
 resources/views/Menu.xml:86"
 "All Charts","","","resources/views/Menu.xml:121
 resources/views/Menu.xml:123
-resources/views/Meta.xml:70"
+resources/views/Meta.xml:74"
 "All Menus","","","resources/views/Menu.xml:77"
 "All Models","","","resources/views/Menu.xml:59"
-"All Modules","","","resources/views/Menu.xml:50
-resources/views/Meta.xml:31"
+"All Modules","","","resources/views/Meta.xml:31
+resources/views/Menu.xml:50"
 "All Schedules","","","resources/views/Menu.xml:133
 resources/views/Menu.xml:131"
-"All Selects","","","resources/views/Meta.xml:160
+"All Selects","","","resources/views/Meta.xml:164
 resources/views/Menu.xml:94"
-"All Translations","","","resources/views/Meta.xml:252
+"All Translations","","","resources/views/Meta.xml:256
 resources/views/Menu.xml:114
 resources/views/Menu.xml:112"
 "All Views","","","resources/views/Menu.xml:68
-resources/views/Meta.xml:58"
-"All the customizations will be lost. Are you sure ?","","","resources/views/Meta.xml:60"
+resources/views/Meta.xml:62"
+"All the customizations will be lost. Are you sure ?","","","resources/views/Meta.xml:64"
 "All views have been restored.","","","java/com/axelor/meta/web/MetaController.java:139"
 "Allow","","","resources/views/Permission.xml:22"
 "An unique permission name.","","","resources/domains/Permission.xml:13"
@@ -57,39 +57,39 @@ resources/views/Permission.xml:29"
 "Cron","","","resources/domains/MetaSchedule.xml:23"
 "Data","","","resources/domains/Meta.xml:123"
 "Depends","","","resources/domains/Meta.xml:16"
-"Description","","","resources/domains/MetaSchedule.xml:21
+"Description","","","resources/views/Meta.xml:248
+resources/domains/MetaSchedule.xml:21
 resources/domains/Meta.xml:15
-resources/views/Meta.xml:244
 resources/domains/Meta.xml:171
 resources/domains/Meta.xml:152
 resources/domains/Role.xml:14"
-"Details","","","resources/views/Meta.xml:54"
+"Details","","","resources/views/Meta.xml:58"
 "Disable the user from the specified date.","","","resources/domains/User.xml:23"
 "Domain filter as condition.","","","resources/domains/Permission.xml:20"
 "Email","","","resources/domains/User.xml:17"
 "English","","","resources/views/User.xml:6"
 "Expires on","","","resources/domains/User.xml:23"
 "Export","","","resources/domains/Permission.xml:19
-resources/views/Meta.xml:254"
+resources/views/Meta.xml:258"
 "Export complete.","","","java/com/axelor/meta/web/MetaController.java:214
 java/com/axelor/meta/schema/actions/ActionExport.java:146
 java/com/axelor/meta/schema/actions/ActionExport.java:148"
-"Field","","","resources/views/Meta.xml:236"
+"Field","","","resources/views/Meta.xml:240"
 "Field is required.","","","java/com/axelor/meta/schema/actions/ActionCondition.java:114"
 "Fields","","","resources/domains/Meta.xml:136
-resources/views/Meta.xml:228"
+resources/views/Meta.xml:232"
 "File","","","resources/domains/Meta.xml:188"
 "File name","","","resources/domains/Meta.xml:167"
 "File path","","","resources/domains/Meta.xml:168"
 "File type","","","resources/domains/Meta.xml:170"
-"Files","","","resources/views/Meta.xml:275
-resources/views/Meta.xml:267"
+"Files","","","resources/views/Meta.xml:271
+resources/views/Meta.xml:279"
 "Filter custom","","","resources/domains/MetaFilter.xml:17"
 "Filter view","","","resources/domains/MetaFilter.xml:18"
 "Filters","","","resources/domains/MetaFilter.xml:16
 resources/views/Meta.xml:14"
-"Following modules have been installed:","","","java/com/axelor/meta/web/ModuleController.java:51"
-"Following modules have been uninstalled:","","","java/com/axelor/meta/web/ModuleController.java:48"
+"Following modules have been installed:","","","java/com/axelor/meta/web/ModuleController.java:47"
+"Following modules have been uninstalled:","","","java/com/axelor/meta/web/ModuleController.java:45"
 "Form","","","resources/views/Meta.xml:8"
 "French","","","resources/views/User.xml:7"
 "Fullname","","","resources/domains/Meta.xml:137"
@@ -99,10 +99,10 @@ resources/views/Meta.xml:14"
 "Grid","","","resources/views/Meta.xml:7"
 "Group","","","resources/views/Group.xml:18
 resources/domains/User.xml:25"
-"Groups","","","resources/views/Meta.xml:136
-resources/domains/Meta.xml:65
+"Groups","","","resources/domains/Meta.xml:65
 resources/views/Group.xml:12
 resources/views/Menu.xml:25
+resources/views/Meta.xml:140
 resources/domains/Meta.xml:35
 resources/views/Menu.xml:22"
 "Hidden","","","resources/views/Group.xml:8"
@@ -110,7 +110,8 @@ resources/views/Menu.xml:22"
 "Icon","","","resources/domains/Meta.xml:58"
 "Increment","","","resources/domains/MetaSequence.xml:16"
 "Initial","","","resources/domains/MetaSequence.xml:17"
-"Install","","","resources/views/Meta.xml:49"
+"Install","","","resources/views/Meta.xml:53"
+"Install selected modules","","","resources/views/Meta.xml:34"
 "Installed","","","resources/domains/Meta.xml:19"
 "Invalid XML.","","","java/com/axelor/meta/web/MetaController.java:67"
 "Invalid field value.","","","java/com/axelor/meta/schema/actions/ActionCondition.java:116"
@@ -124,11 +125,11 @@ resources/views/Menu.xml:22"
 resources/domains/User.xml:18"
 "Left","","","resources/domains/Meta.xml:61"
 "Login","","","resources/domains/User.xml:13"
-"ManyToMany","","","resources/views/Meta.xml:225"
-"ManyToOne","","","resources/views/Meta.xml:223"
+"ManyToMany","","","resources/views/Meta.xml:229"
+"ManyToOne","","","resources/views/Meta.xml:227"
 "Mapped by","","","resources/domains/Meta.xml:151"
-"Menu Item","","","resources/views/Meta.xml:123"
-"Menu Items","","","resources/views/Meta.xml:111"
+"Menu Item","","","resources/views/Meta.xml:127"
+"Menu Items","","","resources/views/Meta.xml:115"
 "Menus","","","resources/domains/Group.xml:22
 resources/views/Group.xml:35
 resources/views/Menu.xml:79"
@@ -137,27 +138,27 @@ resources/views/Menu.xml:79"
 "Mobile","","","resources/domains/Meta.xml:62"
 "Model","","","resources/domains/Meta.xml:94
 resources/domains/Meta.xml:31
-resources/views/Meta.xml:214"
+resources/views/Meta.xml:218"
 "Model Management","","","resources/views/Menu.xml:8"
-"Models","","","resources/views/Meta.xml:208
+"Models","","","resources/views/Meta.xml:212
 resources/views/Menu.xml:61"
 "Module","","","resources/domains/Meta.xml:32
-resources/views/Meta.xml:41
-resources/views/Meta.xml:40
-resources/domains/Meta.xml:95
 resources/domains/Meta.xml:59
+resources/domains/Meta.xml:108
+resources/domains/Meta.xml:95
+resources/views/Meta.xml:44
 resources/domains/Meta.xml:80
-resources/domains/Meta.xml:108"
+resources/views/Meta.xml:45"
 "Module Management","","","resources/views/Menu.xml:10"
 "Modules","","","resources/views/Menu.xml:52"
 "Name","","","resources/domains/MetaSchedule.xml:10
 resources/domains/MetaSchedule.xml:20
 resources/domains/Meta.xml:56
 resources/domains/Meta.xml:133
-resources/domains/Meta.xml:77
 resources/domains/Meta.xml:106
-resources/domains/MetaSequence.xml:12
+resources/domains/Meta.xml:77
 resources/domains/User.xml:14
+resources/domains/MetaSequence.xml:12
 resources/domains/Role.xml:13
 resources/domains/MetaFilter.xml:14
 resources/domains/Meta.xml:27
@@ -170,12 +171,12 @@ resources/domains/Meta.xml:92"
 resources/views/User.xml:59"
 "Navigation","","","resources/domains/Group.xml:15"
 "Next","","","resources/domains/MetaSequence.xml:18"
-"Not implemented yet!","","","resources/views/Meta.xml:205"
+"Not implemented yet!","","","resources/views/Meta.xml:209"
 "Object","","","resources/domains/Meta.xml:187
 resources/domains/Permission.xml:14"
 "Object name","","","resources/domains/Meta.xml:186"
-"OneToMany","","","resources/views/Meta.xml:224"
-"OneToOne","","","resources/views/Meta.xml:222"
+"OneToMany","","","resources/views/Meta.xml:228"
+"OneToOne","","","resources/views/Meta.xml:226"
 "Order","","","resources/domains/Meta.xml:124"
 "Package","","","resources/domains/Meta.xml:147
 resources/domains/Meta.xml:134"
@@ -191,13 +192,13 @@ resources/views/User.xml:27"
 "Password doesn't match","","","java/com/axelor/auth/AuthService.java:223"
 "Permission","","","resources/views/Permission.xml:17"
 "Permissions","","","resources/views/Group.xml:58
-resources/domains/User.xml:27
-resources/views/Permission.xml:7
 resources/domains/Group.xml:20
 resources/views/Menu.xml:43
 resources/domains/Role.xml:15
 resources/views/Menu.xml:40
-resources/views/Group.xml:29"
+resources/views/Group.xml:29
+resources/domains/User.xml:27
+resources/views/Permission.xml:7"
 "Portal","","","resources/views/Meta.xml:12"
 "Preferences","","","resources/views/User.xml:47
 resources/views/User.xml:36"
@@ -210,7 +211,7 @@ resources/domains/Meta.xml:107"
 "Removable","","","resources/domains/Meta.xml:18"
 "Remove","","","resources/domains/Permission.xml:18"
 "Restart jobs...","","","resources/views/Schedules.xml:23"
-"Restore all...","","","resources/views/Meta.xml:60"
+"Restore all...","","","resources/views/Meta.xml:64"
 "Role","","","resources/views/Role.xml:10"
 "Roles","","","resources/views/Menu.xml:34
 resources/views/Role.xml:6
@@ -222,13 +223,13 @@ resources/views/Schedules.xml:13"
 "Schedules","","","resources/views/Schedules.xml:6"
 "Search","","","resources/views/Meta.xml:11"
 "Select","","","resources/domains/Meta.xml:125
-resources/views/Meta.xml:167"
-"Select Item","","","resources/views/Meta.xml:179"
-"Select Items","","","resources/views/Meta.xml:173"
+resources/views/Meta.xml:171"
+"Select Item","","","resources/views/Meta.xml:183"
+"Select Items","","","resources/views/Meta.xml:177"
 "Selects","","","resources/views/Menu.xml:96"
-"Sequence order","","","resources/views/Meta.xml:183"
+"Sequence order","","","resources/views/Meta.xml:187"
 "Shared","","","resources/domains/MetaFilter.xml:20"
-"Show Model","","","resources/views/Meta.xml:243"
+"Show Model","","","resources/views/Meta.xml:247"
 "Show permissions","","","resources/views/Group.xml:20"
 "Size","","","resources/domains/Meta.xml:172"
 "Size in bytes","","","resources/domains/Meta.xml:169"
@@ -242,31 +243,31 @@ resources/views/Meta.xml:167"
 "The select item value.","","","resources/domains/Meta.xml:122"
 "This may terminate any running jobs. Are sure to continue?","","","resources/views/Schedules.xml:23"
 "Title","","","resources/domains/Meta.xml:14
-resources/domains/MetaFilter.xml:15
 resources/domains/Meta.xml:121
+resources/domains/MetaFilter.xml:15
 resources/domains/Meta.xml:78
 resources/domains/Meta.xml:57
 resources/domains/Meta.xml:28"
 "Top","","","resources/domains/Meta.xml:60"
-"Translation","","","resources/views/Meta.xml:261"
+"Translation","","","resources/views/Meta.xml:265"
 "Tree","","","resources/views/Meta.xml:9"
 "Type","","","resources/domains/Meta.xml:148
 resources/domains/Meta.xml:93
 resources/domains/Meta.xml:29"
-"Uninstall","","","resources/views/Meta.xml:51"
+"Uninstall","","","resources/views/Meta.xml:55"
 "User","","","resources/domains/MetaFilter.xml:21
 resources/views/User.xml:19"
 "User Management","","","resources/views/Menu.xml:7"
 "Users","","","resources/views/Menu.xml:14
-resources/views/User.xml:10
-resources/views/Menu.xml:16"
+resources/views/Menu.xml:16
+resources/views/User.xml:10"
 "Validate","","","resources/views/Schedules.xml:22"
 "Value","","","resources/domains/Meta.xml:122
 resources/domains/MetaSchedule.xml:11"
 "Version","","","resources/domains/Meta.xml:17"
-"View","","","resources/views/Meta.xml:78
+"View","","","resources/views/Meta.xml:82
 resources/views/Group.xml:41"
-"View Details","","","resources/views/Meta.xml:79"
+"View Details","","","resources/views/Meta.xml:83"
 "View Management","","","resources/views/Menu.xml:9"
 "Views","","","resources/domains/Group.xml:23
 resources/views/Menu.xml:70"
@@ -277,7 +278,7 @@ resources/views/Menu.xml:70"
 "Whether to grant remove access.","","","resources/domains/Permission.xml:18"
 "Whether to grant write access.","","","resources/domains/Permission.xml:16"
 "Write","","","resources/domains/Permission.xml:16"
-"XML","","","resources/views/Meta.xml:105"
+"XML","","","resources/views/Meta.xml:109"
 "Xml","","","resources/domains/Meta.xml:105
 resources/domains/Meta.xml:96
 resources/domains/Meta.xml:34
