--- a/axelor-core/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-core/src/main/resources/i18n/messages_fr.csv
@@ -1,12 +1,12 @@
 "key","message","comment","context"
 "Action","Action","","resources/domains/Meta.xml:64
 resources/views/User.xml:40
-resources/views/Meta.xml:99
 resources/views/User.xml:51
-resources/domains/Meta.xml:82"
-"Action Menu","Action de menu","","resources/views/Meta.xml:151"
+resources/domains/Meta.xml:82
+resources/views/Meta.xml:103"
+"Action Menu","Action de menu","","resources/views/Meta.xml:155"
 "Action Menus","Les Action Menus","","resources/views/Menu.xml:105
-resources/views/Meta.xml:142
+resources/views/Meta.xml:146
 resources/views/Menu.xml:103"
 "Action name can't be changed.","Le nom de l'action ne peut pas être changé.","","java/com/axelor/meta/web/MetaController.java:95"
 "Actions","Les Actions","","resources/views/Menu.xml:88
@@ -15,25 +15,25 @@ resources/views/Schedules.xml:21"
 "Activate the user from the specified date.","Active l'utilisateur à partir de la date spécifiée.","","resources/domains/User.xml:22"
 "Active","Actif","","resources/domains/MetaSchedule.xml:19"
 "Administration","Administration","","resources/views/Menu.xml:6"
-"All Actions","Les Actions","","resources/views/Meta.xml:91
+"All Actions","Les Actions","","resources/views/Meta.xml:95
 resources/views/Menu.xml:86"
 "All Charts","Les Graphiques","","resources/views/Menu.xml:121
 resources/views/Menu.xml:123
-resources/views/Meta.xml:70"
+resources/views/Meta.xml:74"
 "All Menus","Les Menus","","resources/views/Menu.xml:77"
 "All Models","Les Modèles","","resources/views/Menu.xml:59"
-"All Modules","Les Modules","","resources/views/Menu.xml:50
-resources/views/Meta.xml:31"
+"All Modules","Les Modules","","resources/views/Meta.xml:31
+resources/views/Menu.xml:50"
 "All Schedules","Les Planificateurs","","resources/views/Menu.xml:133
 resources/views/Menu.xml:131"
-"All Selects","Les Sélections","","resources/views/Meta.xml:160
+"All Selects","Les Sélections","","resources/views/Meta.xml:164
 resources/views/Menu.xml:94"
-"All Translations","Les Traductions","","resources/views/Meta.xml:252
+"All Translations","Les Traductions","","resources/views/Meta.xml:256
 resources/views/Menu.xml:114
 resources/views/Menu.xml:112"
 "All Views","Les Vues","","resources/views/Menu.xml:68
-resources/views/Meta.xml:58"
-"All the customizations will be lost. Are you sure ?","Tous les changements seront perdus. Voulez-vous continuer ?","","resources/views/Meta.xml:60"
+resources/views/Meta.xml:62"
+"All the customizations will be lost. Are you sure ?","Tous les changements seront perdus. Voulez-vous continuer ?","","resources/views/Meta.xml:64"
 "All views have been restored.","Toutes les vues ont été restaurés.","","java/com/axelor/meta/web/MetaController.java:139"
 "Allow","Autorisations","","resources/views/Permission.xml:22"
 "An unique permission name.","Nom unique de la permission","","resources/domains/Permission.xml:13"
@@ -57,39 +57,39 @@ resources/views/Permission.xml:29"
 "Cron","Cron","","resources/domains/MetaSchedule.xml:23"
 "Data","Données","","resources/domains/Meta.xml:123"
 "Depends","Dépend de","","resources/domains/Meta.xml:16"
-"Description","Description","","resources/domains/MetaSchedule.xml:21
+"Description","Description","","resources/views/Meta.xml:248
+resources/domains/MetaSchedule.xml:21
 resources/domains/Meta.xml:15
-resources/views/Meta.xml:244
 resources/domains/Meta.xml:171
 resources/domains/Meta.xml:152
 resources/domains/Role.xml:14"
-"Details","Détails","","resources/views/Meta.xml:54"
+"Details","Détails","","resources/views/Meta.xml:58"
 "Disable the user from the specified date.","Bloque l'utilisateur à partir de la date spécifiée.","","resources/domains/User.xml:23"
 "Domain filter as condition.","Condition d'application des accès","","resources/domains/Permission.xml:20"
 "Email","Email","","resources/domains/User.xml:17"
 "English","Anglais","","resources/views/User.xml:6"
 "Expires on","Autoriser jusqu'au","","resources/domains/User.xml:23"
 "Export","Export","","resources/domains/Permission.xml:19
-resources/views/Meta.xml:254"
+resources/views/Meta.xml:258"
 "Export complete.","Export complet.","","java/com/axelor/meta/web/MetaController.java:214
 java/com/axelor/meta/schema/actions/ActionExport.java:146
 java/com/axelor/meta/schema/actions/ActionExport.java:148"
-"Field","Champ","","resources/views/Meta.xml:236"
+"Field","Champ","","resources/views/Meta.xml:240"
 "Field is required.","Champ requis.","","java/com/axelor/meta/schema/actions/ActionCondition.java:114"
 "Fields","Champs","","resources/domains/Meta.xml:136
-resources/views/Meta.xml:228"
+resources/views/Meta.xml:232"
 "File","Fichier","","resources/domains/Meta.xml:188"
 "File name","Nom du fichier","","resources/domains/Meta.xml:167"
 "File path","Chemin du fichier","","resources/domains/Meta.xml:168"
 "File type","Type","","resources/domains/Meta.xml:170"
-"Files","Fichiers","","resources/views/Meta.xml:275
-resources/views/Meta.xml:267"
+"Files","Fichiers","","resources/views/Meta.xml:271
+resources/views/Meta.xml:279"
 "Filter custom","Filtre personnalisé","","resources/domains/MetaFilter.xml:17"
 "Filter view","Filtre de vue","","resources/domains/MetaFilter.xml:18"
 "Filters","Filtres","","resources/domains/MetaFilter.xml:16
 resources/views/Meta.xml:14"
-"Following modules have been installed:","","","java/com/axelor/meta/web/ModuleController.java:51"
-"Following modules have been uninstalled:","","","java/com/axelor/meta/web/ModuleController.java:48"
+"Following modules have been installed:","","","java/com/axelor/meta/web/ModuleController.java:47"
+"Following modules have been uninstalled:","","","java/com/axelor/meta/web/ModuleController.java:45"
 "Form","Formulaire","","resources/views/Meta.xml:8"
 "French","Français","","resources/views/User.xml:7"
 "Fullname","Nom complet","","resources/domains/Meta.xml:137"
@@ -99,10 +99,10 @@ resources/views/Meta.xml:14"
 "Grid","Liste","","resources/views/Meta.xml:7"
 "Group","Groupe","","resources/views/Group.xml:18
 resources/domains/User.xml:25"
-"Groups","Les Groupes","","resources/views/Meta.xml:136
-resources/domains/Meta.xml:65
+"Groups","Les Groupes","","resources/domains/Meta.xml:65
 resources/views/Group.xml:12
 resources/views/Menu.xml:25
+resources/views/Meta.xml:140
 resources/domains/Meta.xml:35
 resources/views/Menu.xml:22"
 "Hidden","Caché","","resources/views/Group.xml:8"
@@ -110,7 +110,8 @@ resources/views/Menu.xml:22"
 "Icon","Icone","","resources/domains/Meta.xml:58"
 "Increment","Increment","","resources/domains/MetaSequence.xml:16"
 "Initial","Valeur origine","","resources/domains/MetaSequence.xml:17"
-"Install","Installer","","resources/views/Meta.xml:49"
+"Install","Installer","","resources/views/Meta.xml:53"
+"Install selected modules","","","resources/views/Meta.xml:34"
 "Installed","Installé ?","","resources/domains/Meta.xml:19"
 "Invalid XML.","XML invalide.","","java/com/axelor/meta/web/MetaController.java:67"
 "Invalid field value.","Valeur non valide.","","java/com/axelor/meta/schema/actions/ActionCondition.java:116"
@@ -124,11 +125,11 @@ resources/views/Menu.xml:22"
 resources/domains/User.xml:18"
 "Left","Menu à gauche ?","","resources/domains/Meta.xml:61"
 "Login","Identifiant","","resources/domains/User.xml:13"
-"ManyToMany","ManyToMany","","resources/views/Meta.xml:225"
-"ManyToOne","ManyToOne","","resources/views/Meta.xml:223"
+"ManyToMany","ManyToMany","","resources/views/Meta.xml:229"
+"ManyToOne","ManyToOne","","resources/views/Meta.xml:227"
 "Mapped by","Mappé avec","","resources/domains/Meta.xml:151"
-"Menu Item","Menu Item","","resources/views/Meta.xml:123"
-"Menu Items","Menu Items","","resources/views/Meta.xml:111"
+"Menu Item","Menu Item","","resources/views/Meta.xml:127"
+"Menu Items","Menu Items","","resources/views/Meta.xml:115"
 "Menus","Les Menus","","resources/domains/Group.xml:22
 resources/views/Group.xml:35
 resources/views/Menu.xml:79"
@@ -137,27 +138,27 @@ resources/views/Menu.xml:79"
 "Mobile","Menu mobile ?","","resources/domains/Meta.xml:62"
 "Model","Objet","","resources/domains/Meta.xml:94
 resources/domains/Meta.xml:31
-resources/views/Meta.xml:214"
+resources/views/Meta.xml:218"
 "Model Management","Gestion des modèles","","resources/views/Menu.xml:8"
-"Models","Les Modèles","","resources/views/Meta.xml:208
+"Models","Les Modèles","","resources/views/Meta.xml:212
 resources/views/Menu.xml:61"
 "Module","Module","","resources/domains/Meta.xml:32
-resources/views/Meta.xml:41
-resources/views/Meta.xml:40
-resources/domains/Meta.xml:95
 resources/domains/Meta.xml:59
+resources/domains/Meta.xml:108
+resources/domains/Meta.xml:95
+resources/views/Meta.xml:44
 resources/domains/Meta.xml:80
-resources/domains/Meta.xml:108"
+resources/views/Meta.xml:45"
 "Module Management","Gestion des modules","","resources/views/Menu.xml:10"
 "Modules","Les Modules","","resources/views/Menu.xml:52"
 "Name","Nom","","resources/domains/MetaSchedule.xml:10
 resources/domains/MetaSchedule.xml:20
 resources/domains/Meta.xml:56
 resources/domains/Meta.xml:133
-resources/domains/Meta.xml:77
 resources/domains/Meta.xml:106
-resources/domains/MetaSequence.xml:12
+resources/domains/Meta.xml:77
 resources/domains/User.xml:14
+resources/domains/MetaSequence.xml:12
 resources/domains/Role.xml:13
 resources/domains/MetaFilter.xml:14
 resources/domains/Meta.xml:27
@@ -170,12 +171,12 @@ resources/domains/Meta.xml:92"
 resources/views/User.xml:59"
 "Navigation","Navigation","","resources/domains/Group.xml:15"
 "Next","Valeur suivante","","resources/domains/MetaSequence.xml:18"
-"Not implemented yet!","Pas encore implémenté.","","resources/views/Meta.xml:205"
+"Not implemented yet!","Pas encore implémenté.","","resources/views/Meta.xml:209"
 "Object","Objet","","resources/domains/Meta.xml:187
 resources/domains/Permission.xml:14"
 "Object name","Nom de l'objet","","resources/domains/Meta.xml:186"
-"OneToMany","OneToMany","","resources/views/Meta.xml:224"
-"OneToOne","OneToOne","","resources/views/Meta.xml:222"
+"OneToMany","OneToMany","","resources/views/Meta.xml:228"
+"OneToOne","OneToOne","","resources/views/Meta.xml:226"
 "Order","Ordre","","resources/domains/Meta.xml:124"
 "Package","Nom du package","","resources/domains/Meta.xml:147
 resources/domains/Meta.xml:134"
@@ -191,13 +192,13 @@ resources/views/User.xml:27"
 "Password doesn't match","Le mot de passe ne correspond pas","","java/com/axelor/auth/AuthService.java:223"
 "Permission","Permission","","resources/views/Permission.xml:17"
 "Permissions","Les Permissions","","resources/views/Group.xml:58
-resources/domains/User.xml:27
-resources/views/Permission.xml:7
 resources/domains/Group.xml:20
 resources/views/Menu.xml:43
 resources/domains/Role.xml:15
 resources/views/Menu.xml:40
-resources/views/Group.xml:29"
+resources/views/Group.xml:29
+resources/domains/User.xml:27
+resources/views/Permission.xml:7"
 "Portal","Portail","","resources/views/Meta.xml:12"
 "Preferences","Préférences","","resources/views/User.xml:47
 resources/views/User.xml:36"
@@ -210,7 +211,7 @@ resources/domains/Meta.xml:107"
 "Removable","Supprimable ?","","resources/domains/Meta.xml:18"
 "Remove","Suppression","","resources/domains/Permission.xml:18"
 "Restart jobs...","Redémarrer","","resources/views/Schedules.xml:23"
-"Restore all...","Tous restaurer.","","resources/views/Meta.xml:60"
+"Restore all...","Tous restaurer.","","resources/views/Meta.xml:64"
 "Role","Role","","resources/views/Role.xml:10"
 "Roles","Les Roles","","resources/views/Menu.xml:34
 resources/views/Role.xml:6
@@ -222,13 +223,13 @@ resources/views/Schedules.xml:13"
 "Schedules","Planificateurs","","resources/views/Schedules.xml:6"
 "Search","Recherche","","resources/views/Meta.xml:11"
 "Select","Sélection","","resources/domains/Meta.xml:125
-resources/views/Meta.xml:167"
-"Select Item","Elément de la selection","","resources/views/Meta.xml:179"
-"Select Items","Eléments de la selection","","resources/views/Meta.xml:173"
+resources/views/Meta.xml:171"
+"Select Item","Elément de la selection","","resources/views/Meta.xml:183"
+"Select Items","Eléments de la selection","","resources/views/Meta.xml:177"
 "Selects","Les Selections","","resources/views/Menu.xml:96"
-"Sequence order","Ordre d'affichage","","resources/views/Meta.xml:183"
+"Sequence order","Ordre d'affichage","","resources/views/Meta.xml:187"
 "Shared","Partagé ?","","resources/domains/MetaFilter.xml:20"
-"Show Model","Voir le modèle","","resources/views/Meta.xml:243"
+"Show Model","Voir le modèle","","resources/views/Meta.xml:247"
 "Show permissions","Voir les permissions","","resources/views/Group.xml:20"
 "Size","Taille","","resources/domains/Meta.xml:172"
 "Size in bytes","Taille en bytes","","resources/domains/Meta.xml:169"
@@ -242,31 +243,31 @@ resources/views/Meta.xml:167"
 "The select item value.","Valeur de la selection","","resources/domains/Meta.xml:122"
 "This may terminate any running jobs. Are sure to continue?","Cela va arrêter les instances en cours. Voulez-vous continuer ?","","resources/views/Schedules.xml:23"
 "Title","Titre","","resources/domains/Meta.xml:14
-resources/domains/MetaFilter.xml:15
 resources/domains/Meta.xml:121
+resources/domains/MetaFilter.xml:15
 resources/domains/Meta.xml:78
 resources/domains/Meta.xml:57
 resources/domains/Meta.xml:28"
 "Top","Menu du haut ?","","resources/domains/Meta.xml:60"
-"Translation","Traduction","","resources/views/Meta.xml:261"
+"Translation","Traduction","","resources/views/Meta.xml:265"
 "Tree","Arbre","","resources/views/Meta.xml:9"
 "Type","Type","","resources/domains/Meta.xml:148
 resources/domains/Meta.xml:93
 resources/domains/Meta.xml:29"
-"Uninstall","Désinstaller","","resources/views/Meta.xml:51"
+"Uninstall","Désinstaller","","resources/views/Meta.xml:55"
 "User","Utilisateurs","","resources/domains/MetaFilter.xml:21
 resources/views/User.xml:19"
 "User Management","Gestion des utilisateurs","","resources/views/Menu.xml:7"
 "Users","Les Utilisateurs","","resources/views/Menu.xml:14
-resources/views/User.xml:10
-resources/views/Menu.xml:16"
+resources/views/Menu.xml:16
+resources/views/User.xml:10"
 "Validate","Valider","","resources/views/Schedules.xml:22"
 "Value","Valeur","","resources/domains/Meta.xml:122
 resources/domains/MetaSchedule.xml:11"
 "Version","Version","","resources/domains/Meta.xml:17"
-"View","Vue","","resources/views/Meta.xml:78
+"View","Vue","","resources/views/Meta.xml:82
 resources/views/Group.xml:41"
-"View Details","Détails de la vue","","resources/views/Meta.xml:79"
+"View Details","Détails de la vue","","resources/views/Meta.xml:83"
 "View Management","Gestion des vues","","resources/views/Menu.xml:9"
 "Views","Les Vues","","resources/domains/Group.xml:23
 resources/views/Menu.xml:70"
@@ -277,7 +278,7 @@ resources/views/Menu.xml:70"
 "Whether to grant remove access.","Autorise un accès en suppression","","resources/domains/Permission.xml:18"
 "Whether to grant write access.","Autorise un accès en modification","","resources/domains/Permission.xml:16"
 "Write","Modification","","resources/domains/Permission.xml:16"
-"XML","XML","","resources/views/Meta.xml:105"
+"XML","XML","","resources/views/Meta.xml:109"
 "Xml","Xml","","resources/domains/Meta.xml:105
 resources/domains/Meta.xml:96
 resources/domains/Meta.xml:34
